--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -20,23 +20,28 @@
 }
 <h3>商品瀏覽</h3>
 <table border="1">
-    <tr><th>產品</th><th>調整價格</th></tr>
+    <tr><th>商品</th><th>價格</th><th>下架</th></tr>
     @foreach (var item in Model)
     {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductName)
             </td>
-
-
-            @using (@Html.BeginForm("EditPrice", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
-            {
-                <td>
+            <td>
+                @using (@Html.BeginForm("EditPrice", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
+                {
                     <input type="hidden" name="ProductID" value=@item.ProductID />
                     <input type="number" name="UnitPrice" value="@item.UnitPrice" />
                     <input type="submit" value="調整" class="btn btn-default" />
-                </td>
-            }
+                }
+            </td>
+            <td>
+                @using (@Html.BeginForm("OffShelf", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
+                {
+                    <input type="hidden" name="ProductID" value=@item.ProductID />
+                    <input type="submit" value="下架" class="btn btn-default" />
+                }
+            </td>
         </tr>
     }
 </table>
